[package]
name = "koke"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-sys = { version = "0.3.82", features = ["console", "Window", "Document", "Element", "HtmlElement", "HtmlInputElement", "Event", "Response", "Location", "History"] }
uuid = { version="1", features = ["v4", "js"]}

[dev-dependencies]
wasm-bindgen-test = "0.3"
regex = "1"
